# womens-volleyball

./: .gitignore  Pipfile  README.md  SCRAPING_ISSUES.md  cleaning.py  cleaning.qmd  finished_rosters.csv  hometowns.csv  hometowns_geocodio.csv  pyproject.toml  requirements.txt  rosters.py  rosters_2023-24.csv  rosters_2023-24_standard.csv  rosters_2023.csv  rosters_2023_24.csv  rosters_2023_cleaned.csv  rosters_2025-26.csv  rosters_test.csv  teams.csv  teams.json  us_cities.csv  us_cities_geocodio.csv  vb_rosters_2023_24.csv  vb_teams.csv
analysis/: cleaning.qmd
data/: cleaned_positions.csv  missing_teams.csv  rosters_2022.csv  rosters_2023-24.csv  rosters_2024-25.csv  rosters_2025-26.csv  teams.json
src/: rosters.py  scraper.py
