[project]
name = "womens-volleyball"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "requests>=2.32.5",
    "requests-html>=0.10.0",
    "tldextract>=5.3.0",
    "lxml-html-clean>=0.4.3",
    "shot-scraper>=1.8",
]
